
cc_library(
	name = "property_tree",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_iterator//:iterator",
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_any//:any",
		"@com_github_bazelboost_optional//:optional",
		"@com_github_bazelboost_range//:range",
		"@com_github_bazelboost_bind//:bind",
		"@com_github_bazelboost_format//:format",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_multi_index//:multi_index",
		"@com_github_bazelboost_throw_exception//:throw_exception",
		"@com_github_bazelboost_serialization//:serialization"
	],
)
